--- a/Utbk_iOS/Utbk_iOS/en.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/en.lproj/Localizable.strings
@@ -5,6 +5,8 @@
   Created by heyong on 2020/9/13.
   Copyright © 2020 HY. All rights reserved.
 */
+//
+"取消" = "Cancle";
 //我的
 "钱包管理" = "wallet Manager";
 "复制成功" = "copy success";
