--- a/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
@@ -49,6 +49,19 @@
 "选择币种" = "选择币种";
 "请按照顺序点击助记词，已确认您正确备份。" = "请按照顺序点击助记词，已确认您正确备份。";
 "请输入秘钥，可长按粘贴导入钱包地址" = "请输入秘钥，可长按粘贴导入钱包地址";
+"最新价格" = "最新价格";
+"24H涨跌" = "24H涨跌";
+"币种" = "币种";
+"钱包管理" = "钱包管理";
+"团队业绩" = "团队业绩";
+"社区客服" = "社区客服";
+"开源地址" = "开源地址";
+"分享APP" = "分享APP";
+"帮助中心" = "帮助中心";
+"区块链浏览" = "区块链浏览";
+"多语言" = "多语言";
+"清除缓存" = "清除缓存";
+"清除缓存" = "清除缓存";
 
 //可能通用
 "notice" = "公告";
