--- a/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
@@ -13,6 +13,7 @@
 "简体中文" = "简体中文";
 "保存成功" = "保存成功";
 "保存失败" = "保存失败";
+"没有扫描到任何结果" = "没有扫描到任何结果";
 //我的
 "钱包管理" = "钱包管理";
 "复制成功" = "复制成功";
@@ -61,8 +62,31 @@
 "区块链浏览" = "区块链浏览";
 "多语言" = "多语言";
 "清除缓存" = "清除缓存";
-"清除缓存" = "清除缓存";
-
+"关于我们" = "关于我们";
+//首页
+"当前钱包：" = "当前钱包：";
+"原始母币" = "原始母币";
+"折合(USDT)" = "折合(USDT)";
+"主板区" = "主板区";
+"涨幅榜" = "涨幅榜/24H";
+"收币" = "收币";
+"转账" = "转账";
+"划转" = "划转";
+"邀请激活" = "邀请激活";
+"矿池" = "矿池";
+"团队" = "团队";
+"社区" = "社区";
+"上币" = "上币";
+"更多" = "更多";
+"夺宝" = "夺宝";
+"商城" = "商城";
+"游戏" = "游戏";
+"DEFi专区" = "DEFi专区";
+"请输入转币数量" = "请输入转币数量";
+"请输入收币账户地址" = "请输入收币账户地址";
+"当前没有母币，无法激活" = "当前没有母币，无法激活";
+"贡献" = "贡献";
+"可用" = "可用";
 //可能通用
 "notice" = "公告";
 "projectName" = "正拓";
