多语言处理

--- a/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
@@ -87,6 +87,38 @@
 "当前没有母币，无法激活" = "当前没有母币，无法激活";
 "贡献" = "贡献";
 "可用" = "可用";
+"通知公告" = "通知公告";
+"公告" = "公告";
+"贡献收益记录" = "贡献收益记录";
+"空投收益记录" = "空投收益记录";
+"共享挖矿" = "共享挖矿";
+"持币空投" = "持币空投";
+"矿主" = "矿主";
+"累计收益" = "累计收益";
+"历史记录" = "历史记录";
+"请输入联系人姓名" = "请输入联系人姓名";
+"请输入联系人手机号" = "请输入联系人手机号";
+"请输入中文币种名称" = "请输入中文币种名称";
+"请输入英文币种名称" = "请输入英文币种名称";
+"请输入发行总量" = "请输入发行总量";
+"请输入市场已流通量" = "请输入市场已流通量";
+"请输入项目介绍" = "请输入项目介绍";
+"请输入社区用户量" = "请输入社区用户量";
+"请输入营销预算" = "请输入营销预算";
+"团队持仓" = "团队持仓";
+//资产
+"币币" = "币币";
+"总资产" = "总资产";
+"请输入地址" = "请输入地址";
+"请输入数量" = "请输入数量";
+"转币" = "转币";
+"温馨提示：只能划转一次，最多划转300到BTCK,超出部分自动销毁" = "温馨提示：只能划转一次，最多划转300到BTCK,超出部分自动销毁";
+"划转数量不能大于余额" = "划转数量不能大于余额";
+"收款" = "收款";
+"母币转账" = "母币转账";
+"母币划转" = "母币划转";
+"母币收款" = "母币收款";
+"总额" = "总额";
 //可能通用
 "notice" = "公告";
 "projectName" = "正拓";
