--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/en.lproj/BTImportWalletVC.strings
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/en.lproj/BTImportWalletVC.strings
@@ -9,7 +9,7 @@
 "83r-sR-jmh.text" = "Please enter your password again";
 
 /* Class = "UILabel"; text = "请输入助记词单词，并使用逗号分隔"; ObjectID = "9zO-mC-O82"; */
-"9zO-mC-O82.text" = "Enter mnemonic words separated by commas";
+"9zO-mC-O82.text" = "Please enter mnemonic words separated by Spaces";
 
 /* Class = "UIButton"; normalTitle = "助记词"; ObjectID = "AdU-jd-8Ci"; */
 "AdU-jd-8Ci.normalTitle" = "Mnemonic word";
