--- a/Utbk_iOS/Utbk_iOS/en.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/en.lproj/Localizable.strings
@@ -18,7 +18,7 @@
 "钱包管理" = "wallet Manager";
 "复制成功" = "copy success";
 "个人中心" = "Profile";
-"请输入助记词单词，并使用逗号分隔" = "Enter mnemonic words separated by commas";
+"请输入助记词单词，并使用逗号分隔" = "Please enter mnemonic words separated by Spaces";
 "请输入助记词单词" = "Please enter mnemonic words";
 "请输入私钥" = "Please enter your private key";
 "已激活" = "activated";
@@ -87,6 +87,39 @@
 "当前没有母币，无法激活" = "currently there is no mother COINS, cannot activate";
 "贡献" = "Contribution";
 "可用" = "available ";
+"通知公告" = "Announcements";
+"公告" = "announcement";
+"贡献收益记录" = "Revenue contribution record";
+"空投收益记录" = "Record of air drop earnings";
+"共享挖矿" = "Shared mining";
+"持币空投" = "Hold money drop";
+"矿主" = "mine owner";
+"累计收益" = "Accumulated earnings";
+"历史记录" = "Historical record";
+"请输入联系人姓名" = "Please enter the contact name";
+"请输入联系人手机号" = "Please enter your contact phone number";
+"请输入中文币种名称" = "Please enter the name of Chinese currency";
+"请输入英文币种名称" = "Please enter the name of English currency";
+"请输入发行总量" = "Please enter the total number of releases";
+"请输入市场已流通量" = "Please enter the amount in circulation";
+"请输入项目介绍" = "Please enter the project description";
+"请输入社区用户量" = "Please enter the community user count";
+"请输入营销预算" = "Please enter your marketing budget";
+"团队持仓" = "Team position";
+"币币" = "COINS COINS";
+"转币" = "Transfer";
+//资产
+"总资产" = "TotalAssets";
+"充币" = "";
+"请输入地址" = "Please enter the address";
+"请输入数量" = "Please enter the quantity";
+"温馨提示：只能划转一次，最多划转300到BTCK,超出部分自动销毁" = "Warm tip: only one rotation is allowed, the maximum is 300 to BTCK, and the excess part will be destroyed automatically";
+"划转数量不能大于余额" = "The amount of transfer shall not be greater than the balance";
+"收款" = "collection";
+"母币转账" = "Mother currency transfer";
+"母币划转" = "Mother coin transfer";
+"母币收款" = "Mother coin collection";
+"总额" = "Total amount";
 //可能通用
 "notice" = "Notice";
 "projectName" = "ztuo";
