--- a/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
@@ -121,6 +121,8 @@
 "总额" = "总额";
 "买" = "买";
 "卖" = "卖";
+"修改交易密码" = "修改交易密码";
+"温馨提示：请牢记您的提币密码，如果遗忘将无法找回，将无法提现账户资产，请慎重！！" = "温馨提示：请牢记您的提币密码，如果遗忘将无法找回，将无法提现账户资产，请慎重！！";
 //可能通用
 "notice" = "公告";
 "projectName" = "正拓";
