--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/en.lproj/BTContributionRecordVC.strings
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/en.lproj/BTContributionRecordVC.strings
@@ -21,7 +21,7 @@
 "Trr-QL-Y9M.text" = "Accumulated earnings";
 
 /* Class = "UILabel"; text = "币种/数量"; ObjectID = "Vow-FE-qPy"; */
-"Vow-FE-qPy.text" = "Currency/quantity";
+"Vow-FE-qPy.text" = "Currency";
 
 /* Class = "UILabel"; text = "币种"; ObjectID = "XsW-Ng-XHz"; */
 "XsW-Ng-XHz.text" = "Currency";
@@ -30,7 +30,7 @@
 "a15-DP-22q.text" = "BTK：";
 
 /* Class = "UILabel"; text = "数组"; ObjectID = "ady-bo-c9w"; */
-"ady-bo-c9w.text" = "Array";
+"ady-bo-c9w.text" = "quantity";
 
 /* Class = "UIButton"; normalTitle = "收益记录"; ObjectID = "fWQ-B4-m0U"; */
 "fWQ-B4-m0U.normalTitle" = "Earnings record";
@@ -39,7 +39,7 @@
 "fWQ-B4-m0U.selectedTitle" = "Earnings record";
 
 /* Class = "UILabel"; text = "贡献值"; ObjectID = "i0T-Ds-ejv"; */
-"i0T-Ds-ejv.text" = "Contribution value";
+"i0T-Ds-ejv.text" = "Contribution value/benefit balance";
 
 /* Class = "UILabel"; text = "0.00"; ObjectID = "pXq-M4-XMw"; */
 "pXq-M4-XMw.text" = "0.00";
