--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/en.lproj/BTModifyTradePasswordVC.strings
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/en.lproj/BTModifyTradePasswordVC.strings
@@ -3,7 +3,7 @@
 "0ik-JQ-Wqr.placeholder" = "Please enter your password again";
 
 /* Class = "UITextField"; placeholder = "设置密码（6-20个字符）"; ObjectID = "7eb-Jy-JNe"; */
-"7eb-Jy-JNe.placeholder" = "Set the password（6 to 20 characters）";
+"7eb-Jy-JNe.placeholder" = "Set the password（6-20 case plus number）";
 
 /* Class = "UITextField"; placeholder = "请输入旧密码"; ObjectID = "OHw-it-BmP"; */
 "OHw-it-BmP.placeholder" = "Please enter your old password";
