--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/zh-Hans.lproj/BTModifyTradePasswordVC.strings
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/zh-Hans.lproj/BTModifyTradePasswordVC.strings
@@ -3,7 +3,7 @@
 "0ik-JQ-Wqr.placeholder" = "请再次输入密码";
 
 /* Class = "UITextField"; placeholder = "设置密码（6-20个字符）"; ObjectID = "7eb-Jy-JNe"; */
-"7eb-Jy-JNe.placeholder" = "设置密码（6-20个字符）";
+"7eb-Jy-JNe.placeholder" = "设置密码（6-20位大小写加数字）";
 
 /* Class = "UITextField"; placeholder = "请输入旧密码"; ObjectID = "OHw-it-BmP"; */
 "OHw-it-BmP.placeholder" = "请输入旧密码";
