--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/zh-Hans.lproj/BTPayPasswordVC.strings
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/zh-Hans.lproj/BTPayPasswordVC.strings
@@ -18,4 +18,4 @@
 "y9x-2l-ySS.normalTitle" = "Button";
 
 /* Class = "UITextField"; placeholder = "设置密码（6-20个字符）"; ObjectID = "zCR-MT-HwD"; */
-"zCR-MT-HwD.placeholder" = "设置密码（6-20个字符）";
+"zCR-MT-HwD.placeholder" = "设置密码（6-20位大小写加数字）";
