--- a/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
@@ -123,6 +123,10 @@
 "卖" = "卖";
 "修改交易密码" = "修改交易密码";
 "温馨提示：请牢记您的提币密码，如果遗忘将无法找回，将无法提现账户资产，请慎重！！" = "温馨提示：请牢记您的提币密码，如果遗忘将无法找回，将无法提现账户资产，请慎重！！";
+"请输入6-20位大小写加数字的密码组合" = "请输入6-20位大小写加数字的密码组合";
+"温馨提示：最小充值金额1USDT，小于最小金额充值将无法到账且无法退回" = "温馨提示：最小充值金额1USDT，小于最小金额充值将无法到账且无法退回";
+"网体激活" = "网体激活";
+"账户激活" = "账户激活";
 //可能通用
 "notice" = "公告";
 "projectName" = "正拓";
