--- a/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
@@ -127,6 +127,8 @@
 "温馨提示：最小充值金额1USDT，小于最小金额充值将无法到账且无法退回" = "温馨提示：最小充值金额1USDT，小于最小金额充值将无法到账且无法退回";
 "网体激活" = "网体激活";
 "账户激活" = "账户激活";
+"温馨提示：仅支持erc20钱包地址，地址出错将无法找回请认真核对" = "温馨提示：仅支持erc20钱包地址，地址出错将无法找回请认真核对";
+"温馨提示：仅支持trc20钱包地址，地址出错将无法找回请认真核对" = "温馨提示：仅支持trc20钱包地址，地址出错将无法找回请认真核对";
 //可能通用
 "notice" = "公告";
 "projectName" = "正拓";
