--- a/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 "取消" = "取消";
 "网络连接失败" = "网络连接失败";
 "地址为空" = "地址为空";
-"暂未开放" = "暂未开放";
+"敬请期待" = "敬请期待";
 "简体中文" = "简体中文";
 "保存成功" = "保存成功";
 "保存失败" = "保存失败";
@@ -106,9 +106,12 @@
 "请输入社区用户量" = "请输入社区用户量";
 "请输入营销预算" = "请输入营销预算";
 "团队持仓" = "团队持仓";
-//资产
 "币币" = "币币";
+"转币" = "转币";
+"不支持划转" = "不支持划转";
+//资产
 "总资产" = "总资产";
+"充币" = "充币";
 "请输入地址" = "请输入地址";
 "请输入数量" = "请输入数量";
 "转币" = "转币";
