--- a/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
@@ -112,12 +112,15 @@
 "不支持划转" = "不支持划转";
 "为您激活" = "为您激活";
 "激活账户" = "激活账户";
+"正在创建钱包" = "正在创建钱包";
+
 //资产
 "总资产" = "总资产";
 "充币" = "充币";
 "请输入地址" = "请输入地址";
 "请输入数量" = "请输入数量";
 "转币" = "转币";
+"转入" = "转入";
 "温馨提示：只能划转一次，最多划转300到BTCK,超出部分自动销毁" = "温馨提示：只能划转一次，最多划转300到BTCK,超出部分自动销毁";
 "划转数量不能大于余额" = "划转数量不能大于余额";
 "收款" = "收款";
