--- a/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
+++ b/Utbk_iOS/Utbk_iOS/zh-Hans.lproj/Localizable.strings
@@ -140,6 +140,11 @@
 "账户激活" = "账户激活";
 "温馨提示：仅支持erc20钱包地址，地址出错将无法找回请认真核对" = "温馨提示：仅支持erc20钱包地址，地址出错将无法找回请认真核对";
 "温馨提示：仅支持trc20钱包地址，地址出错将无法找回请认真核对" = "温馨提示：仅支持trc20钱包地址，地址出错将无法找回请认真核对";
+"矿工费每笔：" = "矿工费每笔：";
+"个" = "个";
+"子、母币收益比例：" = "子、母币收益比例：";
+"持币算力公式：个人持币量X个人持币值=持币收益" = "持币算力公式：个人持币量X个人持币值=持币收益";
+"推广算力公式：团队除最大区合计持币量x0.001=推广收益" = "推广算力公式：团队除最大区合计持币量x0.001=推广收益";
 //可能通用
 "notice" = "公告";
 "projectName" = "正拓";
