--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/en.lproj/BTOrePoolViewController.strings
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/en.lproj/BTOrePoolViewController.strings
@@ -15,7 +15,7 @@
 "EGP-r0-wnA.text" = "BTCK";
 
 /* Class = "UILabel"; text = "子、母币收益比例：BTCK20%、BTK10%\n持币算力公式：个人持币量X个人持币值=持币收益\n推广算力公式：团队除最大区合计持币量x0.001=推广收益"; ObjectID = "LcH-gt-oOR"; */
-"LcH-gt-oOR.text" = "Calculation formula: personal amount of currency X personal value of currency = earnings from currency \n Formula: Promotion calculation formula: total amount of currency held by the team except the maximum area x0.001= earnings from promotion";
+"LcH-gt-oOR.text" = "Percentage of return of child and mother currency: BTCK20%, BTK10% \n Calculation formula: personal amount of currency X personal value of currency = earnings from currency \n Formula: Promotion calculation formula: total amount of currency held by the team except the maximum area x0.001= earnings from promotion";
 
 /* Class = "UILabel"; text = "0"; ObjectID = "OPI-Ah-q5x"; */
 "OPI-Ah-q5x.text" = "0";
