--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/en.lproj/BTAssetSweepVC.strings
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/en.lproj/BTAssetSweepVC.strings
@@ -9,7 +9,7 @@
 "5wr-Lf-s2I.text" = "0.000000 BTCK";
 
 /* Class = "UILabel"; text = "币币"; ObjectID = "65v-Pf-ID1"; */
-"65v-Pf-ID1.text" = "Coins Coins";
+"65v-Pf-ID1.text" = "AccountCoin";
 
 /* Class = "UITextField"; placeholder = "请输入划转数量"; ObjectID = "7zK-jZ-0dZ"; */
 "7zK-jZ-0dZ.placeholder" = "Please enter the number of transfers";
