--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/en.lproj/BTSharePoolCell.strings
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/en.lproj/BTSharePoolCell.strings
@@ -27,7 +27,7 @@
 "i3O-6m-Bcf.text" = "0";
 
 /* Class = "UILabel"; text = "数量(组)"; ObjectID = "j3Z-5I-pXG"; */
-"j3Z-5I-pXG.text" = "Community combined";
+"j3Z-5I-pXG.text" = "Village combustion performance";
 
 /* Class = "UILabel"; text = "0.00"; ObjectID = "trH-M1-RgD"; */
 "trH-M1-RgD.text" = "0.00";
